--- a/frontendrev/index.html
+++ b/frontendrev/index.html
@@ -18,7 +18,7 @@
             <li><a href="about.html">About Us</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="create-account.html">Create Account</a></li>
-            <li><a href="hospital-login.html" style="background-color: rgba(255,255,255,0.2); padding: 0.5rem 1rem; border-radius: 5px; border: 1px solid white;">Hospital Login</a></li>
+            <li><a href="hospital-login.html" style="background-color: #e74c3c; padding: 0.5rem 1rem; border-radius: 5px;">Hospital Login</a></li>
         </ul>
     </nav>
 
@@ -39,26 +39,19 @@
         <!-- Statistics Container -->
         <div class="stats-container">
             <div class="stat-item">
-                <div class="stat-number" id="activeCampaignsCount">0</div>
+                <div class="stat-number">5</div>
                 <div class="stat-label">Active Campaigns</div>
             </div>
             <div class="stat-item">
-                <div class="stat-number" id="verifiedPatientsPercent">100%</div>
+                <div class="stat-number">100%</div>
                 <div class="stat-label">Verified Patients</div>
             </div>
             <div class="stat-item">
-                <div class="stat-number" id="partnerHospitalsCount">0</div>
+                <div class="stat-number">3</div>
                 <div class="stat-label">Partner Hospitals</div>
             </div>
         </div>
     </section>
-
-    <!-- Image 1 Section -->
-    <div class="container">
-        <div class="image-section">
-            <img src="image/image 1.jpeg" alt="Cancer Care Support" style="width: 100%; max-height: 400px; object-fit: cover; border-radius: 10px; margin: 2rem 0;">
-        </div>
-    </div>
 
     <!-- Urgent Campaigns Section -->
     <div class="container">
@@ -107,29 +100,6 @@
                     <p>Funds are used directly for medical treatment, giving patients the care they need.</p>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <!-- Image 2 Section -->
-    <div class="container">
-        <div class="image-section">
-            <img src="image/image 2.jpeg" alt="Community Support" style="width: 100%; max-height: 400px; object-fit: cover; border-radius: 10px; margin: 2rem 0;">
-        </div>
-    </div>
-
-    <!-- Health Events Funding Section -->
-    <div class="container">
-        <div class="section-header">
-            <h2 class="page-title">Support Our Health Events & Seminars</h2>
-            <p class="section-subtitle">Help us organize free health screenings, cancer awareness seminars, and support group meetings for the community.</p>
-        </div>
-
-        <div id="eventsNeedingFunding" class="cards-container">
-            <!-- Events needing funding will be loaded here by JavaScript -->
-        </div>
-
-        <div class="text-center mt-2">
-            <a href="events.html" class="btn btn-primary">View All Events</a>
         </div>
     </div>
 
@@ -316,161 +286,70 @@
                 </ul>
             </div>
             <div class="footer-section">
-                <h4>Contact Us</h4>
-                <p style="font-size: 0.9rem; margin: 0.5rem 0;">
-                    <strong>Phone:</strong><br>
-                    +237 680 480 725<br>
-                    +237 681 018 022
-                </p>
-                <p style="font-size: 0.9rem; margin-top: 1rem;">
-                    Available Monday - Friday, 8AM - 5PM
+                <h4>Important Notice</h4>
+                <p style="font-size: 0.9rem;">
+                    This platform is in its early stage. Be among the first to support
+                    cancer patients in Yaoundé. All donations are managed responsibly.
                 </p>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2026 CancerCare Platform. Created by six students dedicated to helping cancer patients.</p>
-            <p style="margin-top: 0.5rem; font-size: 0.85rem;">
-                <a href="admin-panel.html" style="color: #ccc; text-decoration: none;">Admin Panel</a>
-            </p>
         </div>
     </footer>
 
     <script src="script.js"></script>
+    <script src="api.js"></script>
     <script>
         // Load featured campaigns on home page
-        window.addEventListener('load', function() {
-            const campaigns = loadCampaigns();
+        window.addEventListener('load', async function() {
             const featuredCampaignsContainer = document.getElementById('featuredCampaigns');
 
-            // Update stats dynamically
-            document.getElementById('activeCampaignsCount').textContent = campaigns.length;
-
-            // Calculate verified patients percentage
-            const verifiedCount = campaigns.filter(c => c.verified).length;
-            const verifiedPercent = campaigns.length > 0 ? Math.round((verifiedCount / campaigns.length) * 100) : 100;
-            document.getElementById('verifiedPatientsPercent').textContent = verifiedPercent + '%';
-
-            // Get partner hospitals count from localStorage
-            const hospitals = JSON.parse(localStorage.getItem('hospitals') || '[]');
-            document.getElementById('partnerHospitalsCount').textContent = hospitals.length || 5;
-
             if (featuredCampaignsContainer) {
-                // Clear existing campaigns
-                featuredCampaignsContainer.innerHTML = '';
+                try {
+                    // Fetch campaigns from backend
+                    const campaigns = await campaignAPI.getAll();
+                    
+                    // Show first 3 campaigns
+                    campaigns.slice(0, 3).forEach(campaign => {
+                        const percentage = ((campaign.raisedAmount / campaign.goalAmount) * 100).toFixed(1);
+                        const hasNoDonations = campaign.raisedAmount === 0;
 
-                // Show ALL campaigns (not just 3)
-                campaigns.forEach(campaign => {
-                    const percentage = ((campaign.raisedAmount / campaign.goalAmount) * 100).toFixed(1);
-                    const hasNoDonations = campaign.raisedAmount === 0;
-                    const createdDate = campaign.createdDate ? new Date(campaign.createdDate).toLocaleDateString() : 'N/A';
+                        const campaignCard = document.createElement('div');
+                        campaignCard.className = 'card campaign-card';
+                        campaignCard.innerHTML = `
+                            <h3>${campaign.patientName}</h3>
+                            <p><strong>${campaign.title}</strong></p>
+                            <p style="margin: 1rem 0;">${campaign.description}</p>
 
-                    const campaignCard = document.createElement('div');
-                    campaignCard.className = 'card campaign-card';
-                    campaignCard.innerHTML = `
-                        <h3>${campaign.patientName}</h3>
-                        ${campaign.verified ? '<span class="verified-badge" style="display: inline-block; margin-bottom: 0.5rem;">Verified Patient</span>' : ''}
-                        <p style="color: #666; font-size: 0.9rem; margin: 0.3rem 0;">
-                            <strong>Hospital:</strong> ${campaign.hospitalName || 'N/A'}
-                        </p>
-                        <p style="color: #666; font-size: 0.9rem; margin: 0.3rem 0;">
-                            <strong>Date:</strong> ${createdDate}
-                        </p>
-                        ${hasNoDonations ? '<p style="color: #e74c3c; font-weight: bold; margin: 0.5rem 0;">No donations yet - Be the first!</p>' : ''}
-                        <p style="margin: 1rem 0;">${campaign.story}</p>
+                            <div style="margin: 1rem 0;">
+                                <p><strong>Hospital:</strong> ${campaign.hospitalName}</p>
+                                <p><strong>Goal:</strong> ${formatCurrency(campaign.goalAmount)}</p>
+                                <p><strong>Raised:</strong> ${formatCurrency(campaign.raisedAmount)}</p>
 
-                        <div style="margin: 1rem 0;">
-                            <p><strong>Goal:</strong> ${formatCurrency(campaign.goalAmount)}</p>
-                            <p><strong>Raised:</strong> ${formatCurrency(campaign.raisedAmount)}</p>
-
-                            <div class="progress-bar" style="margin: 1rem 0;">
-                                <div class="progress-fill" style="width: ${percentage}%"></div>
-                            </div>
-                            <p style="text-align: center; color: ${hasNoDonations ? '#e74c3c' : '#2ecc71'}; font-weight: bold;">
-                                ${percentage}% funded
-                            </p>
-                        </div>
-
-                        <div style="display: flex; gap: 1rem; margin-top: 1rem;">
-                            <a href="campaign-details.html?id=${campaign.id}" class="btn btn-primary" style="flex: 1; text-align: center;">
-                                View Details
-                            </a>
-                            <a href="donate.html?campaign=${campaign.id}" class="btn btn-secondary" style="flex: 1; text-align: center; ${hasNoDonations ? 'background-color: #e74c3c; border-color: #e74c3c;' : ''}">
-                                ${hasNoDonations ? 'Be First!' : 'Donate'}
-                            </a>
-                        </div>
-                    `;
-
-                    featuredCampaignsContainer.appendChild(campaignCard);
-                });
-            }
-
-            // Load events needing funding
-            const eventsNeedingFundingContainer = document.getElementById('eventsNeedingFunding');
-            if (eventsNeedingFundingContainer) {
-                const events = loadEvents();
-                const eventsNeedingFunding = events.filter(e => e.needsFunding && e.raisedAmount < e.goalAmount);
-
-                if (eventsNeedingFunding.length === 0) {
-                    eventsNeedingFundingContainer.innerHTML = `
-                        <div class="card" style="text-align: center; padding: 2rem;">
-                            <p style="color: #2ecc71; font-size: 1.2rem; font-weight: bold;">
-                                All events are fully funded! Thank you for your support!
-                            </p>
-                            <p style="color: #666; margin-top: 1rem;">
-                                Check back soon for new events that need your help.
-                            </p>
-                        </div>
-                    `;
-                } else {
-                    eventsNeedingFunding.forEach(event => {
-                        const percentage = ((event.raisedAmount / event.goalAmount) * 100).toFixed(1);
-                        const remaining = event.goalAmount - event.raisedAmount;
-
-                        const eventCard = document.createElement('div');
-                        eventCard.className = 'card';
-                        eventCard.innerHTML = `
-                            <h3>${event.title}</h3>
-                            <p style="color: #666; margin: 0.5rem 0;">
-                                <strong>Date:</strong> ${new Date(event.date).toLocaleDateString('en-US', {
-                                    weekday: 'long',
-                                    year: 'numeric',
-                                    month: 'long',
-                                    day: 'numeric'
-                                })}
-                            </p>
-                            <p style="color: #666; margin: 0.5rem 0;">
-                                <strong>Type:</strong> ${event.type}
-                            </p>
-                            <p style="margin: 1rem 0;">${event.description}</p>
-
-                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin: 1rem 0;">
-                                <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
-                                    <span><strong>Goal:</strong> ${formatCurrency(event.goalAmount)}</span>
-                                    <span><strong>Raised:</strong> ${formatCurrency(event.raisedAmount)}</span>
-                                </div>
-                                <div class="progress-bar">
+                                <div class="progress-bar" style="margin: 1rem 0;">
                                     <div class="progress-fill" style="width: ${percentage}%"></div>
                                 </div>
-                                <p style="text-align: center; color: #1976D2; font-weight: bold; margin-top: 0.5rem;">
+                                <p style="text-align: center; color: ${hasNoDonations ? '#e74c3c' : '#2ecc71'}; font-weight: bold;">
                                     ${percentage}% funded
-                                </p>
-                                <p style="text-align: center; color: #e74c3c; font-weight: bold; margin-top: 0.5rem;">
-                                    ${formatCurrency(remaining)} needed
                                 </p>
                             </div>
 
                             <div style="display: flex; gap: 1rem; margin-top: 1rem;">
-                                <a href="events.html" class="btn btn-primary" style="flex: 1; text-align: center;">
+                                <a href="campaign-details.html?id=${campaign.id}" class="btn btn-primary" style="flex: 1; text-align: center;">
                                     View Details
                                 </a>
-                                <a href="events.html" class="btn btn-secondary" style="flex: 1; text-align: center; background-color: #2ecc71; border-color: #2ecc71;">
-                                    Donate Now
+                                <a href="donate.html?campaign=${campaign.id}" class="btn btn-secondary" style="flex: 1; text-align: center; ${hasNoDonations ? 'background-color: #e74c3c; border-color: #e74c3c;' : ''}">
+                                    ${hasNoDonations ? 'Be First!' : 'Donate'}
                                 </a>
                             </div>
                         `;
 
-                        eventsNeedingFundingContainer.appendChild(eventCard);
+                        featuredCampaignsContainer.appendChild(campaignCard);
                     });
+                } catch (error) {
+                    console.error('Error loading campaigns:', error);
+                    featuredCampaignsContainer.innerHTML = '<p class="text-center" style="grid-column: 1 / -1;">Unable to load campaigns at the moment.</p>';
                 }
             }
 
