--- a/frontendrev/events.html
+++ b/frontendrev/events.html
@@ -425,7 +425,7 @@
                     return;
                 }
 
-                // Process donation
+                // Process donations
                 const success = donateToEvent(eventId, amount);
 
                 if (success) {
