frontennd api and backend linking

--- a/frontendrev/campaign-details.html
+++ b/frontendrev/campaign-details.html
@@ -187,6 +187,9 @@
         // Load campaign details when page loads
         window.addEventListener('load', displayCampaignDetails);
     </script>
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
+    <script src="mtn-payment-handler.js"></script>
 </body>
 </html>
 
