--- a/frontendrev/campaigns.html
+++ b/frontendrev/campaigns.html
@@ -119,6 +119,8 @@
         // Load campaigns when page loads
         window.addEventListener('load', displayCampaigns);
     </script>
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
 </body>
 </html>
 
