--- a/frontendrev/create-account.html
+++ b/frontendrev/create-account.html
@@ -153,6 +153,8 @@
             }
         });
     </script>
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
 </body>
 </html>
 
