--- a/frontendrev/donate.html
+++ b/frontendrev/donate.html
@@ -213,6 +213,9 @@
         // Load campaign info when page loads
         window.addEventListener('load', checkCampaignDonation);
     </script>
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
+    <script src="mtn-payment-handler.js"></script>
 </body>
 </html>
 
