--- a/frontendrev/hospital-dashboard.html
+++ b/frontendrev/hospital-dashboard.html
@@ -378,4 +378,7 @@
         // Load verifications when page loads
         window.addEventListener('load', displayVerifications);
     </script>
-
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
+</body>
+</html>
