--- a/frontendrev/login.html
+++ b/frontendrev/login.html
@@ -107,6 +107,8 @@
             }
         });
     </script>
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
 </body>
 </html>
 
