--- a/frontendrev/patient-dashboard.html
+++ b/frontendrev/patient-dashboard.html
@@ -326,5 +326,8 @@
             }, 1000);
         });
     </script>
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
+    <script src="mtn-payment-handler.js"></script>
 </body>
 </html>
