--- a/frontendrev/donor-dashboard.html
+++ b/frontendrev/donor-dashboard.html
@@ -345,5 +345,8 @@
             }, 1000);
         });
     </script>
+    <script src="api-client.js"></script>
+    <script src="backend-integration.js"></script>
+    <script src="mtn-payment-handler.js"></script>
 </body>
 </html>
