--- a/frontendrev/about.html
+++ b/frontendrev/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Cancer Patient Support Platform</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         .team-grid {
             display: grid;
@@ -58,11 +59,21 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="campaigns.html">Campaigns</a></li>
             <li><a href="events.html">Events</a></li>
+            <li><a href="donate.html">Donate</a></li>
             <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="create-account.html">Create Account</a></li>
-            <li><a href="hospital-login.html" style="background-color: #e74c3c; padding: 0.5rem 1rem; border-radius: 5px;">Hospital Login</a></li>
+            <li class="nav-item dropdown">
+    <a href="#" class="nav-link dropdown-toggle" id="notificationBell" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="fas fa-bell"></i> <!-- Font Awesome bell icon -->
+        <span class="badge bg-danger notification-count" style="display:none;">0</span>
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end" id="notificationDropdown" aria-labelledby="notificationBell" style="max-height: 400px; overflow-y: auto; width: 350px;">
+        <!-- Notifications appear here -->
+    </ul>
+</li>
+            <li><a href="hospital-register.html" style="background-color: #e74c3c; padding: 0.5rem 1rem; border-radius: 5px;">Hospital Login</a></li>
         </ul>
     </nav>
 
@@ -123,34 +134,35 @@
 
         <div class="team-grid">
             <div class="team-member">
-                <div class="team-member-photo">S1</div>
+                
+                <img src="image/scrum master and data base developer.jpeg" alt="Student1"  class="team-member-photo">
                 <h3>Student 1</h3>
                 <p>Project Lead & Developer</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S2</div>
+                <img src="image/front end developer.jpeg" alt="Student 2"  class="team-member-photo">
                 <h3>Student 2</h3>
                 <p>Frontend Developer</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S3</div>
+                <img src="image/BackendDevelper 2.jpeg" alt="Student 3" class="team-member-photo">
                 <h3>Student 3</h3>
                 <p>Backend Developer</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S4</div>
+                <img src="image/backend developer.jpeg" alt="Student 4" class="team-member-photo">
                 <h3>Student 4</h3>
-                <p>UI/UX Designer</p>
+                <p>Backend Developer</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S5</div>
+                <img src="image/Task Manager.jpeg" alt="Student 5" class="team-member-photo">
                 <h3>Student 5</h3>
-                <p>Content Manager</p>
+                <p>Task Manager</p>
             </div>
             <div class="team-member">
-                <div class="team-member-photo">S6</div>
+                <img src="image/product owner.jpeg" alt="Student 6" class="team-member-photo">
                 <h3>Student 6</h3>
-                <p>Community Outreach</p>
+                <p>Product Owner</p>
             </div>
         </div>
 
