--- a/frontendrev/campaigns.html
+++ b/frontendrev/campaigns.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patient Campaigns - Cancer Patient Support Platform</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -12,13 +13,10 @@
         <a href="index.html" class="logo">CancerCare</a>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="campaigns.html">Campaigns</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="create-account.html">Create Account</a></li>
-            <li><a href="hospital-login.html" style="background-color: #e74c3c; padding: 0.5rem 1rem; border-radius: 5px;">Hospital Login</a></li>
+
         </ul>
     </nav>
 
