--- a/frontendrev/donor-dashboard.html
+++ b/frontendrev/donor-dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donor Dashboard - Cancer Patient Support Platform</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         .dashboard-header {
             background: var(--primary-blue);
@@ -83,6 +84,15 @@
             <li><a href="campaigns.html">Browse Campaigns</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="about.html">About Us</a></li>
+            <li class="nav-item dropdown">
+    <a href="#" class="nav-link dropdown-toggle" id="notificationBell" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="fas fa-bell"></i> <!-- Font Awesome bell icon -->
+        <span class="badge bg-danger notification-count" style="display:none;">0</span>
+    </a>
+    <ul class="dropdown-menu dropdown-menu-end" id="notificationDropdown" aria-labelledby="notificationBell" style="max-height: 400px; overflow-y: auto; width: 350px;">
+        <!-- Notifications appear here -->
+    </ul>
+</li>
             <li><a href="#" id="logoutBtn">Logout</a></li>
         </ul>
     </nav>
@@ -199,9 +209,9 @@
 
             if (!currentUser || currentUser.userType !== 'donor') {
                 showAlert('Please login as a donor to access this page', 'error');
-                setTimeout(() => {
+               
                     window.location.href = 'login.html';
-                }, 2000);
+                
                 return;
             }
 
@@ -342,7 +352,7 @@
             showAlert('Logged out successfully', 'success');
             setTimeout(() => {
                 window.location.href = 'index.html';
-            }, 1000);
+            }, 3000);
         });
     </script>
     <script src="api-client.js"></script>
