--- a/frontendrev/events.html
+++ b/frontendrev/events.html
@@ -125,12 +125,8 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="campaigns.html">Campaigns</a></li>
-            <li><a href="events.html">Events</a></li>
             <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="create-account.html">Create Account</a></li>
-            <li><a href="hospital-login.html" style="background-color: rgba(255,255,255,0.2); padding: 0.5rem 1rem; border-radius: 5px; border: 1px solid white;">Hospital Login</a></li>
         </ul>
     </nav>
 
@@ -413,43 +409,65 @@
             document.body.appendChild(modal);
 
             // Handle form submission
-            document.getElementById('eventDonationForm').addEventListener('submit', function(e) {
-                e.preventDefault();
+            document.getElementById('eventDonationForm').addEventListener('submit', async function(e) {
+    e.preventDefault();
 
-                const amount = parseInt(document.getElementById('donationAmount').value);
-                const donorName = sanitizeInput(document.getElementById('donorName').value);
-                const paymentMethod = document.getElementById('paymentMethod').value;
+    const amount = parseInt(document.getElementById('donationAmount').value);
+    const donorName = sanitizeInput(document.getElementById('donorName').value);
+    const paymentMethod = document.getElementById('paymentMethod').value;
 
-                if (amount < 1000) {
-                    showAlert('Minimum donation amount is 1,000 XAF', 'error');
-                    return;
-                }
+    if (amount < 1000) {
+        showAlert('Minimum donation amount is 1,000 XAF', 'error');
+        return;
+    }
 
-                // Process donations
-                const success = donateToEvent(eventId, amount);
+    if (paymentMethod !== 'mtn') {
+        showAlert('Only MTN Mobile Money is supported for real payments at this time.', 'info');
+        return;
+    }
 
-                if (success) {
-                    // Save donation record
-                    const eventDonations = JSON.parse(localStorage.getItem('eventDonations') || '[]');
-                    eventDonations.push({
-                        eventId: eventId,
-                        eventTitle: event.title,
-                        donorName: donorName,
-                        amount: amount,
-                        paymentMethod: paymentMethod,
-                        date: new Date().toISOString()
-                    });
-                    localStorage.setItem('eventDonations', JSON.stringify(eventDonations));
+    // Use your MTN handler
+    const mtnHandler = new MTNPaymentHandler();
 
-                    modal.remove();
-                    showAlert(`Thank you ${donorName}! Your donation of ${formatCurrency(amount)} has been received.`, 'success');
+    // Simulate the donation data for events (since events use localStorage)
+    const donationData = {
+        amount: amount,
+        donorName: donorName,
+        donorPhone: document.getElementById('phoneNumber')?.value || prompt('Enter MTN phone (e.g., 2376xxxxxxxx):'),
+        paymentMethod: 'mtn',
+        campaignId: event.id,  // using event.id as campaignId for consistency
+        message: 'Donation to event'
+    };
 
-                    // Refresh events display
-                    displayEvents();
-                } else {
-                    showAlert('Donation failed. Please try again.', 'error');
-                }
+    // Create temporary donation record
+    const donation = await DonationManager.createDonation(donationData);  // Assume this works for events too
+
+    mtnHandler.currentDonation = donation.donation;
+
+    // Trigger real MTN payment
+    await mtnHandler.handleMTNPaymentFlow();
+
+    // On success (handled inside handleMTNPaymentFlow), update event
+    if (!mtnHandler.paymentInProgress) {
+        const success = donateToEvent(event.id, amount);
+        if (success) {
+            const eventDonations = JSON.parse(localStorage.getItem('eventDonations') || '[]');
+            eventDonations.push({
+                eventId: event.id,
+                eventTitle: event.title,
+                donorName: donorName,
+                amount: amount,
+                paymentMethod: 'mtn',
+                date: new Date().toISOString()
             });
+            localStorage.setItem('eventDonations', JSON.stringify(eventDonations));
+
+            modal.remove();
+            showAlert(`Thank you ${donorName}! Your donation of ${formatCurrency(amount)} was successful.`, 'success');
+            displayEvents();
+        }
+    }
+});
         }
 
         // Load calendar and events when page loads
@@ -458,6 +476,6 @@
             displayEvents();
         });
     </script>
+    <script src="mtn-payment-handler.js"></script>
 </body>
 </html>
-
