--- a/frontendrev/index.html
+++ b/frontendrev/index.html
@@ -307,7 +307,6 @@
     </footer>
 
     <script src="script.js"></script>
-    <script src="api.js"></script>
     <script>
         // Load featured campaigns on home page
         window.addEventListener('load', async function() {
@@ -315,8 +314,8 @@
 
             if (featuredCampaignsContainer) {
                 try {
-                    // Fetch campaigns from backend
-                    const campaigns = await campaignAPI.getAll();
+                    // Load campaigns from local storage
+                    const campaigns = loadCampaigns();
                     
                     // Show first 3 campaigns
                     campaigns.slice(0, 3).forEach(campaign => {
