--- a/frontendrev/login.html
+++ b/frontendrev/login.html
@@ -127,6 +127,7 @@
                 email: user.email,
                 phone: user.phone || '',
                 accountType: user.accountType,
+                userType: user.accountType,
                 verified: user.verified || false,
                 sessionToken: generateSecureToken(),
                 registrationDate: user.registrationDate || new Date().toISOString(),
@@ -136,21 +137,19 @@
             localStorage.setItem('currentUser', JSON.stringify(currentUser));
             showAlert('Login successful!', 'success');
 
-            // FIXED: Proper redirect without unnecessary blocks
+            // Redirect based on account type
             setTimeout(() => {
-                 if (user.accountType === 'patient'&& !user.verified) {
+                if (user.accountType === 'patient' && !user.verified) {
                     window.location.href = 'verification.html';
-                     
+                    return;
+                }
+
+                if (user.accountType === 'donor') {
+                    window.location.href = 'donor-dashboard.html';
                 } else {
                     window.location.href = 'patient-dashboard.html';
                 }
-
             }, 1000);
-           setTimeout(() => {
-             if (user.accountType=='donor'){
-                window.location.href = 'donor-dashboard.html';
-             }
-            }, 2000);
         });
     </script>
 </body>
