--- a/frontendrev/index.html
+++ b/frontendrev/index.html
@@ -17,16 +17,15 @@
             <li><a href="events.html">Events</a></li>
             <li><a href="partner-hospitals.html">Partner Hospitals</a></li>
             <li><a href="about.html">About Us</a></li>
-             <li class="nav-item dropdown">
-    <a href="#" class="nav-link dropdown-toggle" id="notificationBell" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="fas fa-bell"></i> <!-- Font Awesome bell icon -->
-        <span class="badge bg-danger notification-count" style="display:none;">0</span>
-    </a>
-    <ul class="dropdown-menu dropdown-menu-end" id="notificationDropdown" aria-labelledby="notificationBell" style="max-height: 200px; overflow-y: auto; width: 250px;">
-        <!-- Notifications appear here -->
-    </ul>
-</li>
-</li>
+            <li class="nav-item dropdown nav-notification">
+                <a href="#" class="nav-link dropdown-toggle" id="notificationBell" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="fas fa-bell"></i>
+                    <span class="badge bg-danger notification-count" style="display:none;">0</span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" id="notificationDropdown" aria-labelledby="notificationBell" style="max-height: 200px; overflow-y: auto; width: 250px;">
+                    <!-- Notifications appear here -->
+                </ul>
+            </li>
         </ul>
     </nav>
 
